Updated my index.html file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>markdown Example using GitHub</title>
 </head>
 <body>
-    
+    <h1>Welcome to all of my GitHub fun!</h1>
 </body>
 </html>
