updated the index
added sections

--- a/index.html
+++ b/index.html
@@ -7,5 +7,24 @@
 </head>
 <body>
     <h1>Welcome to all of my GitHub fun!</h1>
+    <header>
+        <h2 class="hidden">Main Nav</h2>
+        <nav>
+            <ul>
+                <li><a href="#">Section 1</a></li>
+                <li><a href="#">Section 2</a></li>
+                <li><a href="#">Section 3</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Services</h2>
+            <h3>Service 1</h3>
+            <h3>Service 2</h3>
+            <h3>Service 3</h3>
+        </section>
+    </main>
 </body>
 </html>
